--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "cross-env SOCKET=true node ./scripts/next-remote-watch.js ./data",
-    "dev": "next dev",
+    "dev": "next-remote-watch ./data",
     "build": "next build && node ./scripts/generate-sitemap",
     "serve": "next start",
     "analyze": "cross-env ANALYZE=true next build",
@@ -12,7 +12,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@fontsource/inter": "4.5.2",
+    "@fontsource/inter": "^4.5.11",
+    "@fontsource/source-sans-3": "^4.5.10",
+    "@fontsource/source-serif-4": "^4.5.12",
     "@mailchimp/mailchimp_marketing": "^3.0.58",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
@@ -23,6 +25,7 @@
     "image-size": "1.0.0",
     "mdx-bundler": "^8.0.0",
     "next": "12.1.4",
+    "next-remote-watch": "^1.0.0",
     "next-themes": "^0.0.14",
     "postcss": "^8.4.5",
     "preact": "^10.6.2",
@@ -39,7 +42,7 @@
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "sharp": "^0.28.3",
-    "tailwindcss": "^3.0.23",
+    "tailwindcss": "^3.1.4",
     "unist-util-visit": "^4.0.0"
   },
   "devDependencies": {
