Testing out starter kit's own Revue submish

--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ KLAVIYO_API_KEY=
 KLAVIYO_LIST_ID=
 
 REVUE_API_URL=https://www.getrevue.co/api/v2/
-REVUE_API_KEY=
+REVUE_API_KEY=X8lz3wr14a6KfhUzhAfHtPGO-2h-ug3M
 
 EMAILOCTOPUS_API_URL=https://emailoctopus.com/api/1.6/
 EMAILOCTOPUS_API_KEY=
